# obsidian-nexus

./: .gitignore  .mcp.json  Cargo.toml  DEVLOG.md  README.md  TODO.md  install.sh  package.json  pnpm-lock.yaml
.claude/skills/search-benchmark/: SKILL.md
.github/workflows/: release.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/sidecar/: agent-bridge.mjs  bridge-protocol.d.ts  claude-bridge.mjs  package-lock.json  package.json
apps/desktop/sidecar/adapters/: claude.mjs  gemini.mjs
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/binaries/: .gitignore  copy-sidecars.sh
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/components/: FrontmatterCard.test.tsx  FrontmatterCard.tsx  UpdateChecker.tsx
apps/desktop/src/components/layout/: ChatPanel.tsx  Sidebar.tsx
apps/desktop/src/hooks/: useChat.ts  useDocViewer.ts  useProjectTree.ts  useProjects.ts  useSearch.ts
apps/desktop/src/types/: index.ts
crates/agent/: Cargo.toml
crates/agent/resources/: config.json
crates/agent/resources/librarian/: app-guide.md  doc-maintenance.md  output-rules.md  search-strategy.md  system.md
crates/agent/src/: cli_bridge.rs  cli_detector.rs  error.rs  lib.rs  prompt.rs  session.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: doc.rs  graph.rs  index.rs  mod.rs  onboard.rs  project.rs  ranking.rs  search.rs  setup.rs  update.rs  watch.rs
crates/core/: Cargo.toml
crates/core/migrations/: V1__initial.sql  V2__embeddings.sql  V3__sqlite_vec.sql  V4__links.sql  V5__search_enhancements.sql  V6__fts_aliases.sql
crates/core/src/: config.rs  embedding.rs  error.rs  index_engine.rs  indexer.rs  lib.rs  llm.rs  onboard.rs  project.rs  search.rs  status.rs  test_helpers.rs  watcher.rs
crates/core/src/db/: sqlite.rs
crates/core/src/templates/: claude_md_section.md  frontmatter_guide.md  librarian_agent.md  librarian_skill.md
crates/core/tests/: integration_test.rs  search_scenarios_test.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: main.rs
docs/: 00-프로젝트-개요.md  01-아키텍처.md  02-검색-시스템.md  03-MCP-도구-레퍼런스.md  04-데이터베이스-스키마.md  05-설정-가이드.md  06-개발-가이드.md  09-배포-및-버전-관리.md  10-사서-에이전트-설계.md  11-데스크톱-UI-아키텍처.md  on-config.json
docs/.obsidian/: graph.json  workspace.json
docs/architecture/: agent-architecture.md  chunk-scalability.md  search-alias-improvement-plan.md  search-system-deep-dive.md  search-system.md
docs/architecture/decisions/: 001-view-cooldown-atomic-sql.md  002-attention-docs-thresholds-constants.md  006-llm-query-rewriting.md  007-desktop-onboarding-button.md  008-fts5-aliases-column-strategy.md  009-search-quality-vector-hub-fix.md  010-embedding-context-prefix.md  011-agent-mcp-bundle-path.md  embedding-model-options.md
docs/architecture/search/: README.md
docs/architecture/search/performance/: 2026-03-26-search-benchmark-v2.md  2026-03-26-search-benchmark-v3.md  2026-03-26-search-benchmark.md  2026-03-27-search-benchmark-v2.md  2026-03-27-search-benchmark.md
docs/benchmark/: 2026-03-19-search-benchmark.md  2026-03-21-search-benchmark.md
docs/context/: deployment-troubleshooting.md  librarian-legacy.md  mcp-scenario-test.md
docs/context/benchmark/: 2026-03-20-search-benchmark.md  2026-03-25-search-benchmark.md  2026-03-26-search-benchmark.md
docs/devlog/: 2026-03-23-cli-detection-cpu-runaway-fix.md  2026-03-23-dashboard-popular-ranking.md  2026-03-23-dashboard-ranking-empty-bug.md  2026-03-23-mcp-path-mismatch-fix.md  2026-03-24-dashboard-attention-docs.md  2026-03-25-mcp-update-asset-name-fix.md  2026-03-25-onboarding-button.md  2026-03-25-search-quality-improvement.md  2026-03-26-alias-search-improvement.md  2026-03-26-embedding-prefix-search-quality.md  2026-03-26-mcp-binary-path-confusion.md  2026-03-26-nexus-get-toc-mcp-update-fix.md  2026-03-26-search-quality-fix.md  2026-03-26-stale-binary-tags-bug.md  2026-03-26-tauri-sidecar-mcp-binary-update.md  2026-03-26-tauri-signing-key-troubleshooting.md  2026-03-27-graph-query-tools.md  2026-03-31-desktop-markdown-rendering-improvement.md  2026-04-01-clippy-sed-perl-troubleshooting.md  2026-04-01-search-filter-pagination-multi-doc.md
docs/guides/: archiving-strategy.md  configuration.md  deployment.md  development.md  getting-started.md  installation.md
docs/ideas/: archive-system.md  binary-management-improvement.md  graph-traversal.md  plugin-system.md  reasoning-support.md
docs/integrations/: claude-gemini-cli-detection.md  mcp-tools.md  ollama-setup.md  subagent-mcp-setup.md
docs/overview/: comparison-serena.md  glossary.md  project-overview.md
docs/plan/: 2026-03-31-search-filter-pagination-onboard.md
homebrew/Casks/: obsidian-nexus.rb
homebrew/Formula/: nexus.rb  obsidian-nexus.rb
scripts/: bump-version.sh  update-homebrew-tap.sh
(+12 files in other folders)
