[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/cli",
    "crates/mcp-server",
    "crates/agent",
    "apps/desktop/src-tauri",
]

[workspace.package]
version = "0.5.3"
edition = "2021"
license = "MIT"
rust-version = "1.75"

[workspace.dependencies]
# Shared dependencies
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
clap = { version = "4", features = ["derive"] }
pulldown-cmark = "0.12"
notify = "7"
sha2 = "0.10"
dirs = "6"
toml = "0.8"
walkdir = "2"
reqwest = { version = "0.12", features = ["json", "blocking"] }
sqlite-vec = "0.1"
regex = "1"
