[package]
name = "nexus-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "nexus"
path = "src/main.rs"

[dependencies]
nexus-core = { path = "../core" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ctrlc = "3"
urlencoding = "2"
