[package]
name = "nexus-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "obs-nexus"
path = "src/main.rs"

[dependencies]
nexus-core = { path = "../core" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ctrlc = "3"
urlencoding = "2"
reqwest = { workspace = true }
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
tempfile = "3"
dirs = { workspace = true }
