[package]
name = "nexus-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
pulldown-cmark = { workspace = true }
notify = { workspace = true }
sha2 = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }
walkdir = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tempfile = "3"
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
