[package]
name = "nexus-mcp-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "nexus-mcp-server"
path = "src/main.rs"

[dependencies]
nexus-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
