[package]
name = "nexus-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
nexus-core = { path = "../../../crates/core" }
nexus-agent = { path = "../../../crates/agent" }
tokio = { workspace = true }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
urlencoding = "2"
arboard = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
